--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -21,15 +22,42 @@
       integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/animatecss/3.5.2/animate.min.css"
+    />
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+
+    <script
+      src="https://code.jquery.com/jquery-3.6.0.min.js"
+      integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+      integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+
     <title>Liken Srore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
-      src="../src/assets/js/vendor/modernizr-3.6.0.min.js"
-      type="text/jsx"
-    ></script>
+
+    <!--
     <script
       src="../src/assets/js/vendor/jquery-migrate-3.3.0.min.js"
       type="text/jsx"
@@ -93,10 +121,10 @@
     <script
       src="../src/assets/js/plugins/jquery.elevatezoom.js"
       type="text/jsx"
-    ></script>
+    ></script> -->
 
     <!-- account js START here  -->
-    <script
+    <!-- <script
       src="../src/assets/js/vendor/jquery-3.6.0.min.js"
       type="text/jsx"
     ></script>
@@ -161,9 +189,9 @@
       type="text/jsx"
     ></script>
 
-    <!-- account js END HERE -->
-    <!-- Template  JS -->
-    <script src="../src/assets/js/main.js" type="text/jsx"></script>
-    <script src="../src/assets/js/shop.js" type="text/jsx"></script>
+    account js END HERE
+    Template  
+    <script src="../src/assets/js/main.js" type="txt/js"></script>
+    <script src="../src/assets/js/shop.js" type="text/jsx"></script>  JS-->
   </body>
 </html>
