bid half compleat

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       referrerpolicy="no-referrer"
     ></script>
 
-    <title>Liken Srore</title>
+    <title>Liken Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
